# zerovox

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  pyrightconfig.json  setup.py  train_g2p.py
configs/: g2p_de_autoreg.yaml  g2p_de_autoreg_zamia.yaml  tts_base.yaml  tts_base_emb256.yaml  tts_medium.yaml  tts_medium_ldec.yaml  tts_medium_styledec.yaml  tts_small.yaml
configs/corpora/: de_thorsten.yaml
configs/corpora/cv_de_100/: cv_tmpl.yaml.tmpl  de_cv_speaker_0.yaml  de_cv_speaker_1.yaml  de_cv_speaker_10.yaml  de_cv_speaker_11.yaml  de_cv_speaker_12.yaml  de_cv_speaker_13.yaml  de_cv_speaker_14.yaml  de_cv_speaker_15.yaml  de_cv_speaker_16.yaml  de_cv_speaker_17.yaml  de_cv_speaker_18.yaml  de_cv_speaker_19.yaml  de_cv_speaker_2.yaml  de_cv_speaker_20.yaml  de_cv_speaker_21.yaml  de_cv_speaker_22.yaml  de_cv_speaker_23.yaml  de_cv_speaker_24.yaml  de_cv_speaker_25.yaml  de_cv_speaker_26.yaml  de_cv_speaker_27.yaml  de_cv_speaker_28.yaml  de_cv_speaker_29.yaml  de_cv_speaker_3.yaml  de_cv_speaker_30.yaml  de_cv_speaker_31.yaml  (+75 more)
doc/: model.md
lexicon/: german_mfa_add.dict
scripts/: build.sh  lexedit.sh  run_tensorboard.sh  train_de_autoreg.sh  train_g2p_de_autoreg.sh  train_g2p_en_autoreg.sh  upload.sh
utils/: align.py  demo.py  dump_pkl.py  edit_meldec_in_checkpoint.py  export_hifigan.py  lexedit.py  nemo_test.py  oovtool.py  prepare_align.py  preprocess.py  remove_hifigan_from_checkpoint.py  review_lj_corpus.py  stats.py  train_g2p.py  train_kaldi.py  train_tts.py
zerovox/: __init__.py  demo.py
zerovox/g2p/: data.py  g2p.py  model.py  tokenizer.py
zerovox/hifigan/: models.py
zerovox/lexicon/: __init__.py  lexedit.py
zerovox/tts/: GST.py  ResNetSE34V2.py  acoustic.py  blocks.py  data.py  fs2.py  hifigan.py  mels.py  model.py  networks.py  normalize.py  postnet.py  styletts.py  symbols.py  synthesize.py
(+29 files in other folders)
